--- a/index.html
+++ b/index.html
@@ -8,13 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="brasaopr-fundotransparente.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">O Colégio Estadual Cívico Militar João Paulo II está localizado no município de Arapoti, no bairro Vila Romana. Sua estrutura foi construída no ano de 2012 e conta com 12 salas de aula, um refeitório, uma cozinha, laboratórios de informática e ciências e salas de estrutura administrativa e pedagógica. </p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+        </div>
+                    <img class="escola-imagem" src="colegio.jpg" alt="Colegio Joao Paulo">
+      </section>
+      
+      <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-div">
+     <img class="estudante-imagem" src="pernalonga.jpg" alt="foto do pernalonga">
+                 <h3 class="estudante-nome">Marcelo</h3>
+                 <img class="estudante-icone" src="facebook.png" alt="icone facebook">
+                 <img class="estudante-icone" src="instagram.jpeg" alt="icone instagram">
+        </div>
+        <div class="estudante-div">
+     <img class="estudante-imagem" src="pica_pau.jpg" alt="foto do marcelo">
+                 <h3 class="estudante-nome">Marcelo</h3>
+                 <img class="estudante-icone" src="facebook.png" alt="icone facebook">
+                 <img class="estudante-icone" src="instagram.jpeg" alt="icone instagram">
+        </div>
+</section>
 </body>
 </html>
