--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="brasaopr-fundotransparente.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="joao-paulo2.jpg" alt="logo do colegio">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -38,6 +38,28 @@
                  <img class="estudante-icone" src="facebook.png" alt="icone facebook">
                  <img class="estudante-icone" src="instagram.jpeg" alt="icone instagram">
         </div>
+      <div class="estudante-todos">
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="pica_pau.jpg" alt="foto do pica_pau">
+                <h3 class="estudante-nome">Marcelo</h3>
+                <a href="https://facebook.com"><img class="estudante-icone" src="facebook.png"
+                        alt="icone facebook"></a>
+                <a href="https://instagram.com"><img class="estudante-icone" src="instagram.jpeg"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="pernalonga.jpg" alt="foto do pernalonga">
+                <h3 class="estudante-nome">Marcelo</h3>
+                <a href="https://facebook.com"><img class="estudante-icone" src="facebook.png"
+                        alt="icone facebook"></a>
+                <a href="https://instagram.com"><img class="estudante-icone" src="instagram.jpeg"
+                        alt="icone instagram"></a>
+            </div>
+   
 </section>
 </body>
+<footer class="rodape">
+    <img class="rodape-imagem"src="parana.jpg" alt="logo da alura start">
+</footer>
 </html>
